WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52081
[Qt] Navigator.cookiesEnabled return true for Qt even if there is no cookie jar
https://bugs.webkit.org/show_bug.cgi?id=52081
Summary
[Qt] Navigator.cookiesEnabled return true for Qt even if there is no cookie jar
Benjamin Poulain
Reported
2011-01-07 13:49:06 PST
Since
https://bugs.webkit.org/show_bug.cgi?id=50080
, cookiesEnabled() returns true even when the cookie jar is null.
Attachments
Patch
(3.33 KB, patch)
2011-01-07 14:01 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
GDB backtrace in debug mode
(9.66 KB, text/plain)
2011-01-09 18:26 PST
,
Csaba Osztrogonác
no flags
Details
Patch
(3.67 KB, patch)
2011-01-10 11:56 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2011-01-07 14:01:40 PST
Created
attachment 78266
[details]
Patch I think it is ok regarding the thread safety because this check is in the thread that has the possibility to change the cookie jar, so both action cannot happen simultaneously.
WebKit Commit Bot
Comment 2
2011-01-08 17:29:16 PST
The commit-queue encountered the following flaky tests while processing
attachment 78266
[details]
: fast/workers/storage/use-same-database-in-page-and-workers.html
bug 50995
(author:
dumi@chromium.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3
2011-01-08 17:30:41 PST
Comment on
attachment 78266
[details]
Patch Clearing flags on attachment: 78266 Committed
r75337
: <
http://trac.webkit.org/changeset/75337
>
WebKit Commit Bot
Comment 4
2011-01-08 17:30:47 PST
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 5
2011-01-09 18:25:54 PST
It made fast/dom/navigator-detached-no-crash.html crash.
Csaba Osztrogonác
Comment 6
2011-01-09 18:26:42 PST
Created
attachment 78361
[details]
GDB backtrace in debug mode
Antonio Gomes
Comment 7
2011-01-09 19:13:08 PST
Rolled out. Reopening...
Benjamin Poulain
Comment 8
2011-01-10 11:56:40 PST
Created
attachment 78421
[details]
Patch
Benjamin Poulain
Comment 9
2011-01-10 11:58:22 PST
(In reply to
comment #5
)
> It made fast/dom/navigator-detached-no-crash.html crash.
It is really a strange case. The function can be called on an invalid object, I must test for the validity of the manager before calling anything on it. I am glad the autotest have catched that.
Kenneth Rohde Christiansen
Comment 10
2011-01-10 11:58:50 PST
Comment on
attachment 78421
[details]
Patch Should work this time around :-)
WebKit Commit Bot
Comment 11
2011-01-10 12:30:29 PST
Comment on
attachment 78421
[details]
Patch Clearing flags on attachment: 78421 Committed
r75411
: <
http://trac.webkit.org/changeset/75411
>
WebKit Commit Bot
Comment 12
2011-01-10 12:30:36 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug