2011-01-08  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Navigator.cookiesEnabled return true for Qt even if there is no cookie jar
        https://bugs.webkit.org/show_bug.cgi?id=52081

        Test for the availability of cookie jar to return if cookies are enabled or not. The network access
        manager always exist, not the cookie jar.

        * platform/qt/CookieJarQt.cpp:
        (WebCore::cookiesEnabled):
2011-01-08  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Navigator.cookiesEnabled return true for Qt even if there is no cookie jar
        https://bugs.webkit.org/show_bug.cgi?id=52081

        Add an autotest for checking the result of Navigator.cookiesEnabled depending
        on the status of the cookie jar.

        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::navigatorCookieEnabled):

git-svn-id: svn://svn.chromium.org/blink/trunk@75337 bbb929c8-8fbe-4397-9dbb-9b2b20218538