third_party/WebKit/Source/WebCore/platform/qt/CookieJarQt.cpp
@@ -115,7 +115,7 @@ String cookieRequestHeaderFieldValue(const Document* document, const KURL &url)
 
 bool cookiesEnabled(const Document* document)
 {
-    return !!networkAccessManager(document);
+    return !!networkAccessManager(document)->cookieJar();
 }
 
 bool getRawCookies(const Document*, const KURL&, Vector<Cookie>& rawCookies)
