third_party/WebKit/WebKit/qt/tests/qwebpage/tst_qwebpage.cpp
@@ -35,6 +35,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <qgraphicsscene.h>
 #include <qgraphicsview.h>
 #include <qgraphicswebview.h>
+#include <qnetworkcookiejar.h>
 #include <qnetworkrequest.h>
 #include <qwebdatabase.h>
 #include <qwebelement.h>
@@ -132,6 +133,7 @@ private slots:
     void supportedContentType();
     void infiniteLoopJS();
     void networkAccessManagerOnDifferentThread();
+    void navigatorCookieEnabled();
 
 #ifdef Q_OS_MAC
     void macCopyUnicodeToClipboard();
@@ -2709,6 +2711,17 @@ void tst_QWebPage::networkAccessManagerOnDifferentThread()
     m_page->mainFrame()->load(url);
     QTRY_COMPARE(loadSpy.count(), 1);
     QCOMPARE(m_page->mainFrame()->childFrames()[0]->url(), QUrl("qrc:///resources/frame_a.html"));
+}
+
+void tst_QWebPage::navigatorCookieEnabled()
+{
+    m_page->networkAccessManager()->setCookieJar(0);
+    QVERIFY(!m_page->networkAccessManager()->cookieJar());
+    QVERIFY(!m_page->mainFrame()->evaluateJavaScript("navigator.cookieEnabled").toBool());
+
+    m_page->networkAccessManager()->setCookieJar(new QNetworkCookieJar());
+    QVERIFY(m_page->networkAccessManager()->cookieJar());
+    QVERIFY(m_page->mainFrame()->evaluateJavaScript("navigator.cookieEnabled").toBool());
 }
 
 #ifdef Q_OS_MAC
